--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name":         "ajtis/job-queue-bundle",
+    "name":         "jms/job-queue-bundle",
     "description":  "Allows to run and schedule Symfony console commands as background jobs.",
     "keywords":     ["job","queue", "background", "cron", "scheduled"],
     "homepage":     "http://jmsyst.com/bundles/JMSJobQueueBundle",
@@ -12,15 +12,15 @@
         }
     ],
     "require": {
-        "php": "^7.1 || ^8.0",
-        "symfony/framework-bundle": "^4.0 || ^5.0 || ^6.0 || ^7.0 || ^8.0",
-        "symfony/error-handler": "^4.4 || ^5.0 || ^6.0 || ^7.0 || ^8.0",
-        "doctrine/common": "^3.0",
-        "symfony/process": "^4.0 || ^5.0 || ^6.0 || ^7.0 || ^8.0"
+        "php": "^8.2",
+        "symfony/framework-bundle": "^5.0 || ^6.0 || ^7.0 || ^8.0",
+        "doctrine/collections": "^1.8 || ^2.0",
+        "doctrine/common": "^2.0 || ^3.0",
+        "symfony/process": "^5.0 || ^6.0 || ^7.0 || ^8.0",
+        "ext-pcntl": "*"
     },
     "require-dev": {
         "doctrine/doctrine-fixtures-bundle": "*",
-        "sensio/framework-extra-bundle": "*",
         "symfony/class-loader": "*",
         "symfony/yaml": "*",
         "symfony/browser-kit": "*",
@@ -31,8 +31,10 @@
         "symfony/twig-bundle": "*",
         "symfony/form": "*",
         "symfony/validator": "*",
-        "phpunit/phpunit": "^6.0",
-        "symfony/intl": "*"
+        "phpunit/phpunit": "^12.0",
+        "symfony/intl": "*",
+        "rector/rector": "^2.0",
+        "php-cs-fixer/shim": "^3.68"
     },
     "suggest": {
         "sensio/framework-extra-bundle": "Required when using the webinterface.",
